# KromblastSocketControlLib

./: .gitignore  README.md  meson.build  test.json  test.py
.github/workflows/: release.yml
src/: ksocket.cpp  ksocket.hpp  main.cpp  socket_control.cpp  socket_control.hpp
subprojects/: _kromblast.wrap  argparse.wrap  cpp-httplib.wrap  kromblast.wrap  nlohmann-json.wrap  webview-meson.wrap
test/: index.html
